# LangChain_simpleBot_POC

./: README.md  pyproject.toml
