[tool.poetry]
name = "langchain-simplebot-poc"
version = "0.1.0"
description = "My first bot to get familiar with LangChain"
authors = ["FlemmingR <146717357+Flemming-R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ollama = "^0.4.7"
langchain = "^0.3.15"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
notebook = "^7.3.2"
langchain-ollama = "^0.2.2"
langchain-community = "^0.3.15"
wikipedia = "^1.4.0"
langchain-openai = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
